Picture too small and logo not positioned correctly

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,8 +55,14 @@ header div {
   text-align: left;
 }
 
-special-container {
+.special-container {
   width: 100%;
   height: 500px;
   background-color: gray;
+}
+
+img {
+  margin-top: 32px;
+  margin-left: 24px;
+  width: 60px;
 }
